tests/output/self_hosted/no_method_error.txt
tests/no_method_error.oomph:2: error: type 'Str' has no method named 'lolz'

    print("hello".lolz())
                 ^^^^^

